# chenking

./: .gitignore  FINAL_INTEGRATION_REPORT.md  PROJECT_SUMMARY.md  README.md  RENAMING_SUMMARY.md  docker-compose.yml  pyproject.toml  run_tests.py  run_tests_new.py  setup_local_embeddings.sh
chenking/: __init__.py  chenk.py  chenker.py  chunk_utils.py  document_checker.py  document_processor.py  embedding_client.py  markdown_processor.py  processor.py  text_splitter.py  tika_document_processor.py
embedding-api/: Dockerfile  main.py  main_encode_test.py  main_model_test.py  main_simple.py  main_threading_fix.py  main_transformers_direct.py  requirements.txt
examples/: LLAMAINDEX_INTEGRATION.md  llamaindex_integration.py  local_embedding_demo.py  practical_llama_integration.py  quick_integration_demo.py  simple_llama_integration.py
tests/: README.md  __init__.py  test_chenker.py  test_document_processor.py  test_embedding.py  test_embedding_client.py  test_integration.py  test_processor.py  test_tika_document_processor.py
tests/resources/: README.md
tests/resources/inputs/: example_tika_batch.json  example_tika_document.json  short_test_doc.json  test_page_splitting.json
tests/resources/outputs/: cleanup_verification.json  example_batch_result.json  example_single_result.json  example_stdin_result.json  final_test.json  final_verification.json  optimized_test.json  short_test_result.json  test_chenk_final.json  test_chenk_numbering.json  test_no_pages.json  test_page_result.json  test_with_content.json  tika_result_batch.json  tika_result_single.json  verification_test.json
